代码初步；README与LICENSE